<resources>
    <string name="app_name">NewProject</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="todo">TODO</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="email_id">Email ID</string>
    <string name="more">More</string>
    <string name="tabels">Tabels</string>
</resources>
